--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "vue": "2.6.10",
+    "vue-cropper": "^0.5.5",
     "vue-router": "3.0.6",
+    "vue2-editor": "^2.10.2",
     "vuex": "3.1.0"
   },
   "devDependencies": {
@@ -33,7 +35,7 @@
     "@vue/test-utils": "1.0.0-beta.29",
     "autoprefixer": "9.5.1",
     "babel-eslint": "10.1.0",
-    "babel-jest": "23.6.0",
+    "babel-jest": "^26.3.0",
     "babel-plugin-dynamic-import-node": "2.3.3",
     "chalk": "2.4.2",
     "connect": "3.6.6",
